--- a/index.html
+++ b/index.html
@@ -11,69 +11,43 @@
 
 <body>
     <header>
-        <nav class="navbar">
-            <a class="navbar__logo" href="./index.html">
-                <img src="./img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
-            </a>
-            <ul class="menu">
-                <li class="menu__item">
-                    <a class="menu__link" href="index.html">INICIO</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="./pages/nosotros.html">NOSOTROS</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="./pages/tienda.html">TIENDA</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="./pages/catering.html">CATERING</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="./pages/contacto.html">CONTACTO</a>
-                </li>
-            </ul>  
-            <form class="busqueda" action="/action_page.php">
-                <input class="busqueda__text"  type="search" id="buscador" name="buscador" placeholder="Buscar">
-                <input class="busqueda__button" name="boton1" type="image" alt="submit" src="./img/lupa.svg">
-            </form>
-            <a class="cart" href="./pages/tienda.html">
-                <img src="./img/carrito.svg" alt="carrito de compras">
-            </a> 
-        </nav>
-        
-
-
-            <!-- <div class="banner_fondo">
-                <figure>
-                    <img src="./img/banner2.jpg" alt="Torta Banner">
-                </figure>
+        <div class="banner__inicio">
+            <div class="top">
+                <div>
+                    <a class="top__logo" href="./index.html">
+                        <img src="./img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
+                    </a>
+                </div>
+                <div class="buscar">
+                    <form action="/action_page.php">
+                        <input class="buscar__producto"  type="search" id="buscador" name="buscador" placeholder="Buscar">
+                        <input class="buscar__button" name="boton1" type="image" alt="submit" src="./img/lupa.svg">
+                    </form>
+                    <a class="cart" href="./pages/tienda.html">
+                        <img src="./img/carrito.svg" alt="carrito de compras">
+                    </a>
+                </div>
             </div>
-            <div>
-                <img class="banner_logo" src="./img/logosinfondo.png" alt="Logo Tres Dulces Niñas">
-            </div>                  
-        </section> 
-        <section>
-            <div class="buscar">
-                <form action="/action_page.php">
-                    <input class="buscar_producto"  type="search" id="buscador" name="buscador" placeholder="Buscar">
-                    <input class="buscar_button" name="boton1" type="image" alt="submit" src="./img/lupa.svg">
-                </form>
-                <a class="cart" href="./pages/tienda.html"><img src="./img/carrito.svg" alt="carrito de compras"></a>
-            </div>
-        </section>
-        <section>
-            <div class="menu">
-                <nav>
-                    <ul>
-                        <li><a href="index.html">INICIO</a></li>
-                        <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
-                        <li><a href="./pages/tienda.html">TIENDA</a></li>
-                        <li><a href="./pages/catering.html">CATERING</a></li>
-                        <li><a href="./pages/contacto.html">CONTACTO</a></li>
-                    </ul>  
-                </nav>
-            </div> 
-        </section> -->
+            <nav class="navbar">
+                <ul class="menu">
+                    <li class="menu__item">
+                        <a class="menu__link" href="index.html">INICIO</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="./pages/nosotros.html">NOSOTROS</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="./pages/tienda.html">TIENDA</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="./pages/catering.html">CATERING</a>
+                    </li>
+                    <li class="menu__item">
+                        <a class="menu__link" href="./pages/contacto.html">CONTACTO</a>
+                    </li>
+                </ul>  
+            </nav>
+        </div>
     </header>
 
     <!-- <main>
