--- a/index.html
+++ b/index.html
@@ -50,95 +50,165 @@
         </div>
     </header>
 
-    <!-- <main>
-        <section>
-            <div class="salto_linea">
+    <main>
+        <section class="container">
+            <div class="salto__linea">
                 <img src="./img/saltodelinea.svg" alt="decoración">
             </div>
-            <article>
-                <div class="parrafo_inicio">
-                    <p>Somos un equipo familiar dedicado a complacer los paladares de todos nuestros clientes, poniendo mucha pasión y amor a cada una de nuestras exquisitas y mágicas recetas que traspasan fronteras.</p>
+            <div class="inicio">
+                <div class="inicio__descripcion">
+                    <p>Somos un equipo familiar dedicado a complacer los paladares de todos nuestros clientes, poniendo mucha pasión y amor a cada una de nuestras exquisitas y mágicas recetas, que traspasan fronteras.</p>
                 </div>
-                <div>
-                    <div class="img_inicio">
+                <div class="pictures">
+                    <div class="pictures__torta1">
                         <img src="./img/inicio1.jpg" alt="torta/postre">
                     </div>
-                    <div class="img_inicio">
+                    <div class="pictures__torta2">
                         <img src="./img/inicio2.jpg" alt="torta/postre">
                     </div>
                 </div>
-            </article>
-            <div class="salto_linea">
+            </div>
+            <div class="salto__linea">
                 <img src="./img/saltodelinea.svg" alt="decoración">
             </div>
         </section>
 
-        <section>
-            <div class="galeria_inicio">
-                <div>
-                    <img src="./img/producto1.jpg" alt="torta/postre">
+        <section class="container">
+            <div class="tienda">
+                <div class="tienda__galeria">
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto1.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__arg">
+                            <a href="./pages/tienda.html"> 
+                                <h5>Pastel de Arándanos</h5> 
+                                <h5>$2.300</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto2.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__arg">
+                            <a href="./pages/tienda.html"> 
+                                <h5>Red Velvet</h5>
+                                <h5>$2.800</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto3.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__arg">
+                            <a href="./pages/tienda.html">
+                                <h5>Tiramisú (Porción)</h5>
+                                <h5>$600</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto4.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__arg">
+                            <a href="./pages/tienda.html">
+                                <h5>Torta de Zanahoria</h5>
+                                <h5>$2.500</h5>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div>
-                    <img src="./img/producto2.jpg" alt="torta/postre">
-                </div>
-                <div>
-                    <img src="./img/producto3.jpg" alt="torta/postre">
-                </div>
-                <div>
-                    <img src="./img/producto4.jpg" alt="torta/postre">
-                </div>
-                <div class="enlace_tienda">
+                <div class="tienda__enlace">
                     <a href="./pages/tienda.html">Visita nuestra tienda online<span class="bandera"><img src="./img/band_arg.png" alt="icono bandera argentina"></span></a>
                 </div>
             </div>
-            <div class="galeria_inicio">
-                <div>
-                    <img src="./img/producto5.jpg" alt="torta/postre">
-                </div>
-                <div>
-                    <img src="./img/producto6.jpg" alt="torta/postre">
-                </div>
-                <div>
-                    <img src="./img/producto7.jpg" alt="torta/postre">
-                </div>
-                <div>
-                    <img src="./img/producto8.jpg" alt="torta/postre">
-                </div>
-                <div class="enlace_tienda">
+            <div class="tienda">
+                <div class="tienda__galeria">
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto5.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__vzla">
+                            <a href="./pages/tienda.html"> 
+                                <h5>Red Velvet (Porción)</h5>
+                                <h5>Bs.80</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto6.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__vzla">
+                            <a href="./pages/tienda.html"> 
+                                <h5>CupCakes (unid.)</h5>
+                                <h5>Bs.10</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto7.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__vzla">
+                            <a href="./pages/tienda.html"> 
+                                <h5>Suspiros</h5>
+                                <h5>Bs.30</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="producto">
+                        <div class="producto__picture">
+                            <img src="./img/producto8.jpg" alt="torta/postre">
+                        </div>
+                        <div class="producto__descripcion__vzla">
+                            <a href="./pages/tienda.html"> 
+                                <h5>Torta de Chocolate</h5>
+                                <h5>Bs.200</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div> 
+                <div class="tienda__enlace">
                     <a href="">Visita nuestra tienda online<span class="bandera"><img src="./img/band_vzla.png" alt="icono bandera venezuela"></span></a>
                 </div>
-            </div>   
+            </div>
         </section>
-    </main> -->
+    </main>
 
-    <!-- <footer>
-        <section class="pie_pagina">
-            <div class="redes_sociales">
-                <div class="titulo_pie">
+    <footer>
+        <section class="pie">
+            <div class="pie__redes">
+                <div class="pie__titulo">
                     <h2>Síguenos</h2>
                 </div>
                 <div class="redes">
-                    <div class="logo_redes"> <img src="./img/logoface.svg" alt="logo facebook"> </div>
-                    <div class="logo_redes"> <img src="./img/logoinsta.svg" alt="logo instagram"> </div>
-                    <div class="logo_redes"> <img src="./img/logotiktok.svg" alt="logo tiktok"> </div>
+                    <a class="redes__logo" href=""> <img src="./img/logoface.svg" alt="logo facebook"> </a>
+                    <a class="redes__logo" href=""> <img src="./img/logoinsta.svg" alt="logo instagram"> </a>
+                    <a class="redes__logo" href=""> <img src="./img/logotiktok.svg" alt="logo tiktok"> </a>
+                    <a class="redes__logo" href=""> <img src="./img/twitter.svg" alt="logo twitter"> </a>
+                    <a class="redes__logo" href=""> <img src="./img/youtube.svg" alt="logo youtube"> </a>
                 </div>
             </div>
-            <div class="redes_sociales">
-                <div class="titulo_pie">
+            <div class="pie__contacto">
+                <div class="pie__titulo">
                     <h2>Contáctanos</h2>
                 </div>
                 <div class="sucursales">
                     <div>
                         <h3>Sucursal Venezuela</h3>
-                        <h4><span class="icon_contact"><img src="./img/phone.svg" alt="logo teléfono">+584142359875</span></h4>
-                        <h4><span class="icon_contact"><img src="./img/mail.svg" alt="logo mail">tresdulcesniñas.vzla@gmail.com</span></h4>
-                        <h4><span class="icon_contact"><img src="./img/map.svg" alt="logo mapa">Av. Andrés Bello, CP 1060, Caracas.</span></h4>
+                        <h4><span><img src="./img/phone.svg" alt="logo teléfono">+584142359875</span></h4>
+                        <h4><span><img src="./img/mail.svg" alt="logo mail">tresdulcesniñas.vzla@gmail.com</span></h4>
+                        <h4><span><img src="./img/map.svg" alt="logo mapa">Av. Andrés Bello, CP 1060, Caracas.</span></h4>
                     </div>
                     <div>
                         <h3> Sucursal Argentina</h3>
-                        <h4><span class="icon_contact"><img src="./img/phone.svg" alt="logo teléfono">+541120638597</span></h4>
-                        <h4><span class="icon_contact"><img src="./img/mail.svg" alt="logo mail">tresdulcesniñas.arg@gmail.com</span></h4>
-                        <h4><span class="icon_contact"><img src="./img/map.svg" alt="logo mapa">Av. Cabildo 5678, CP 1234, CABA.</span></h4>
+                        <h4><span><img src="./img/phone.svg" alt="logo teléfono">+541120638597</span></h4>
+                        <h4><span><img src="./img/mail.svg" alt="logo mail">tresdulcesniñas.arg@gmail.com</span></h4>
+                        <h4><span><img src="./img/map.svg" alt="logo mapa">Av. Cabildo 5678, CP 1234, CABA.</span></h4>
                     </div>
                 </div>
             </div>
@@ -146,6 +216,7 @@
         <section class="copyright">
             <h6 class="text_copyright">© Copyright Tres Dulces Niñas 2019-2022. Todos los derechos reservados.</h6>
         </section>
-    </footer> -->
+    </footer>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 </body>
 </html>
