--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -53,7 +53,7 @@
     <main>
         <section>
             <div class="nosot_principal">
-                <div class="salto_linea">
+                <div class="salto__linea">
                     <img src="../img/saltodelinea.svg" alt="decoración">
                 </div>
                 <div class="titu_princ">
@@ -96,38 +96,38 @@
                 <img src="../img/saltodelinea.svg" alt="decoración">
             </div>
         </section>
-        
-
     </main>
 
     <footer>
-        <section class="pie_pagina">
-            <div class="redes_sociales">
-                <div class="titulo_pie">
+        <section class="pie">
+            <div class="pie__redes">
+                <div class="pie__titulo">
                     <h2>Síguenos</h2>
                 </div>
                 <div class="redes">
-                    <div class="logo_redes"> <img src="../img/logoface.svg" alt="logo facebook"> </div>
-                    <div class="logo_redes"> <img src="../img/logoinsta.svg" alt="logo instagram"> </div>
-                    <div class="logo_redes"> <img src="../img/logotiktok.svg" alt="logo tiktok"> </div>
+                    <a class="redes__logo" href=""> <img src="../img/logoface.svg" alt="logo facebook"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/logoinsta.svg" alt="logo instagram"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/logotiktok.svg" alt="logo tiktok"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/twitter.svg" alt="logo twitter"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/youtube.svg" alt="logo youtube"> </a>
                 </div>
             </div>
-            <div class="redes_sociales">
-                <div class="titulo_pie">
+            <div class="pie__contacto">
+                <div class="pie__titulo">
                     <h2>Contáctanos</h2>
                 </div>
                 <div class="sucursales">
                     <div>
                         <h3>Sucursal Venezuela</h3>
-                        <h4><span class="icon_contact"><img src="../img/phone.svg" alt="logo teléfono">+584142359875</span></h4>
-                        <h4><span class="icon_contact"><img src="../img/mail.svg" alt="logo mail">tresdulcesniñas.vzla@gmail.com</span></h4>
-                        <h4><span class="icon_contact"><img src="../img/map.svg" alt="logo mapa">Av. Andrés Bello, CP 1060, Caracas.</span></h4>
+                        <h4><span><img src="../img/phone.svg" alt="logo teléfono">+584142359875</span></h4>
+                        <h4><span><img src="../img/mail.svg" alt="logo mail">tresdulcesniñas.vzla@gmail.com</span></h4>
+                        <h4><span><img src="../img/map.svg" alt="logo mapa">Av. Andrés Bello, CP 1060, Caracas.</span></h4>
                     </div>
                     <div>
                         <h3> Sucursal Argentina</h3>
-                        <h4><span class="icon_contact"><img src="../img/phone.svg" alt="logo teléfono">+541120638597</span></h4>
-                        <h4><span class="icon_contact"><img src="../img/mail.svg" alt="logo mail">tresdulcesniñas.arg@gmail.com</span></h4>
-                        <h4><span class="icon_contact"><img src="../img/map.svg" alt="logo mapa">Av. Cabildo 5678, CP 1234, CABA.</span></h4>
+                        <h4><span><img src="../img/phone.svg" alt="logo teléfono">+541120638597</span></h4>
+                        <h4><span><img src="../img/mail.svg" alt="logo mail">tresdulcesniñas.arg@gmail.com</span></h4>
+                        <h4><span><img src="../img/map.svg" alt="logo mapa">Av. Cabildo 5678, CP 1234, CABA.</span></h4>
                     </div>
                 </div>
             </div>
