Se arreglo pagina de Nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,48 +51,42 @@
     </header>
 
     <main>
-        <section>
-            <div class="nosot_principal">
+        <section class="container">
+            <div class="nosotros">
                 <div class="salto__linea">
                     <img src="../img/saltodelinea.svg" alt="decoración">
                 </div>
-                <div class="titu_princ">
+                <div class="nosotros__titulo">
                     <h1>Tres Dulces Niñas</h1>
                 </div>
-                <div class="descrip_nosotros">
+                <div class="nosotros__descripcion">
                     <p>Nace en Venezuela el año 2019 a raiz de la Pandemia Mundial provocada por el virus Covid-19. Se trata de un emprendimiento familiar atendido por tres hermanas que en vista de la pandemia, la cual impidió que cada una pudieran desempeñar con normalidad sus antiguos trabajos, deciden explorar el mundo de la pasteleria, logrando así enamorarse de esta bella arte.</p>
                 </div>
             </div>
-            <div>
-                <div class="nosot_prod">
-                    <img src="../img/nosotros1.jpg" alt="torta/postre">
-                </div>
-                <div class="nosot_prod">
-                    <img src="../img/logosinfondo.png" alt="torta/postre">
-                </div>
-                <div class="nosot_prod">
-                    <img src="../img/nosotros3.jpg" alt="torta/postre">
-                </div>
+            <div class="nosotros__picture">
+                <img src="../img/nosotros1.jpg" alt="torta/postre">
+                <img src="../img/logosinfondo.png" alt="torta/postre">
+                <img src="../img/nosotros3.jpg" alt="torta/postre">
             </div>
             <article>
-                <div class="descrip_nosotros">
+                <div class="nosotros__descripcion">
                     <p >En el año 2020 una de nosotras viaja hasta Argentina y luego de dos años estabilizándose en dicho país, logra concretar la apertura de una nueva sucursal de Tres Dulces Niñas. Ahora nuestros amigos argentinos también pueden disfrutar de nuestros exquisitos sabores que ahora, traspasan fronteras. </p>
                 </div>
             </article>
         </section>
 
-        <div class="img_fija">
-            <img src="../img/nosotros4.jpg" alt="torta/postre">  
+        <div class="picture__fija">
+          <!-- Imagen Fija -->
         </div>
 
-        <section>
-            <div class="descrip_nosotros">
+        <section class="container">
+            <div class="nosotros__descripcion">
                 <p>Desde hace tres años nos dedicamos a complacer a cada cliente de una forma única y especial brindándole diversidad de gustos y sabores, siendo para nosotras una gran muestra de amor cada reseña y comentario positivo que nos brindan luego de probar uno o varios de nuestros postres, tortas y variedad de productos que tenemos para ustedes.</p>
             </div>
-            <div class="agrad_nosotros">
+            <div class="nosotros__agradecimiento">
                 <p>Estamos más que agradecidas por la recepción que nos han brindado en ambos paises y seguiremos aquí, para ustedes.</p>
             </div>
-            <div class="salto_linea">
+            <div class="salto__linea">
                 <img src="../img/saltodelinea.svg" alt="decoración">
             </div>
         </section>
