Se arregló la pagina Tienda

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="buscar">
                     <form action="/action_page.php">
-                        <input class="buscar__producto"  type="search" id="buscador" name="buscador" placeholder="Buscar">
+                        <input class="buscar__producto"  placeholder="Buscar">
                         <input class="buscar__button" name="boton1" type="image" alt="submit" src="../img/lupa.svg">
                     </form>
                     <a class="cart" href="./tienda.html">
@@ -102,8 +102,8 @@
                     <a class="redes__logo" href=""> <img src="../img/logoface.svg" alt="logo facebook"> </a>
                     <a class="redes__logo" href=""> <img src="../img/logoinsta.svg" alt="logo instagram"> </a>
                     <a class="redes__logo" href=""> <img src="../img/logotiktok.svg" alt="logo tiktok"> </a>
-                    <a class="redes__logo" href=""> <img src="../img/twitter.svg" alt="logo twitter"> </a>
-                    <a class="redes__logo" href=""> <img src="../img/youtube.svg" alt="logo youtube"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/logotwitter.svg" alt="logo twitter"> </a>
+                    <a class="redes__logo" href=""> <img src="../img/logoyoutube.svg" alt="logo youtube"> </a>
                 </div>
             </div>
             <div class="pie__contacto">
